<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.dreamlike</groupId>
        <artifactId>JavaxTransformer</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>javax-servlet-scanner</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>io.github.dreamlike.scanner.ServletScanner</main.class>
        <java.version>25</java.version>
        <native.optimization>-Ob</native.optimization>
    </properties>
    <profiles>
        <profile>
            <id>native-base</id>
            <activation>
                <file>
                    <exists>${java.home}/bin/native-image</exists>
                </file>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.10.6</version>
                        <extensions>false</extensions>
                        <configuration>
                            <metadataRepository>
                                <enabled>false</enabled>
                            </metadataRepository>
                            <imageName>${project.artifactId}-native</imageName>
                            <mainClass>${main.class}</mainClass>
                            <buildArgs>
                                <arg>--allow-incomplete-classpath</arg>
                                <arg>--enable-native-access=ALL-UNNAMED</arg>
                                <arg>--no-fallback</arg>
                                <!-- Only difference -->
                                <arg>${native.optimization}</arg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>native-image</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>native-release</id>
            <properties>
                <native.optimization>-O3</native.optimization>
            </properties>
        </profile>

    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>shade-jar-with-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${project.artifactId}-${project.version}</finalName>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${main.class}</Main-Class>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>